; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-netlink-manual.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-netlink-manual.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* @LOG_INFO, align 4
  %9 = call i32 @test_setup_logging(i32 %8)
  %10 = call i64 @sd_netlink_open(i32** %6)
  %11 = icmp sge i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert_se(i32 %12)
  %14 = load i32*, i32** %6, align 8
  %15 = ptrtoint i32* %14 to i32
  %16 = call i32 @assert_se(i32 %15)
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @test_tunnel_configure(i32* %17)
  store i32 %18, i32* %7, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @sd_netlink_unref(i32* %19)
  store i32* %20, i32** %6, align 8
  %21 = icmp eq i32* %20, null
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert_se(i32 %22)
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @sd_netlink_open(i32**) #1

declare dso_local i32 @test_tunnel_configure(i32*) #1

declare dso_local i32* @sd_netlink_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
